# pyconda_package_testing

./: README.md  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
pyconda_package_testing/: __init__.py  module1.py
pyconda_package_testing/tests/: charges  file.xyz  test_1.py  test_xtb.py  wbo  xtb.out  xtbrestart  xtbtopo.mol
